# embed-rez

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  README.md  premake5.lua
embed-rez/: CMakeLists.txt  embed-rez.lua  premake5.lua
embed-rez/src/: main.cpp
embed-rez/src/path/: path.cpp  path.h
example/: CMakeLists.txt  example.lua  res.xml
example/src/: main.cpp  res.cpp
vs/: embed-rez-wks.sln  embed-rez.vcxproj  embed-rez.vcxproj.filters  example.vcxproj  example.vcxproj.filters  resources.vcxproj
